[package]
name = "spacegay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "macros", "runtime-tokio-rustls" ] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }